force-app/main/default/objects/Contact/fields/Background_Check_Exp__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Exp__c</fullName>
    <label>Background Check Exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>