force-app/main/default/objects/Contact/fields/Degree_Pursued__c.field-meta.xml
<CustomField>
    <fullName>Degree_Pursued__c</fullName>
    <label>Degree Pursued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High school</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Associates</fullName>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Other (fill-in)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>