force-app/main/default/objects/Contact/fields/DPI_Staff__c.field-meta.xml
<CustomField>
    <fullName>DPI_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPI Staff</label>
    <type>Checkbox</type>
</CustomField>