force-app/main/default/objects/Contact/fields/GitHub_Account__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Account__c</fullName>
    <label>GitHub Account</label>
    <type>Url</type>
</CustomField>