force-app/main/default/objects/Contact/fields/Graduation_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Month_Year__c</fullName>
    <label>Graduation Month/Year</label>
    <type>Date</type>
</CustomField>