force-app/main/default/objects/Contact/fields/Lead_DPI_Staff__c.field-meta.xml
<CustomField>
    <fullName>Lead_DPI_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead DPI Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <type>Lookup</type>
</CustomField>