force-app/main/default/objects/Contact/fields/Major_or_Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Major_or_Field_of_Study__c</fullName>
    <label>Major or Field of Study</label>
    <type>TextArea</type>
</CustomField>