force-app/main/default/objects/Contact/fields/Offender_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Offender_Expiration__c</fullName>
    <label>Offender Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>