force-app/main/default/objects/Contact/fields/Person_Photo__c.field-meta.xml
<CustomField>
    <fullName>Person_Photo__c</fullName>
    <formula>IMAGE(Photos__c, &quot;Upload Photo&quot;, 200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Photo</label>
    <type>Text</type>
</CustomField>