force-app/main/default/objects/Contact/fields/Replit_Account__c.field-meta.xml
<CustomField>
    <fullName>Replit_Account__c</fullName>
    <label>Replit Account</label>
    <type>Url</type>
</CustomField>