force-app/main/default/objects/Contact/fields/school_email_address__c.field-meta.xml
<CustomField>
    <fullName>school_email_address__c</fullName>
    <label>school email address</label>
    <type>Email</type>
</CustomField>